# serializer version: 1
# name: test_finalize[mongo]
  dict({
    '_id': '7cf872dc',
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'deleted': False,
    'file': dict({
      'id': 1,
      'name': 'malus.fa.gz',
    }),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'job': dict({
      'id': 'fb085f7f',
    }),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'space': dict({
      'id': 0,
    }),
    'upload': 1,
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_finalize[obj]
  dict({
    'count': 1,
    'created_at': 'approximately_now_datetime',
    'file': dict({
      'id': 1,
      'name': 'malus.fa.gz',
    }),
    'files': list([
    ]),
    'gc': dict({
      'a': 0.2,
      'c': 0.2,
      'g': 0.2,
      'n': 0.2,
      't': 0.2,
    }),
    'id': '7cf872dc',
    'job': dict({
      'archived': False,
      'created_at': 'approximately_now_datetime',
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
      'workflow': 'create_subtraction',
    }),
    'linked_samples': list([
    ]),
    'name': 'foo',
    'nickname': 'bar',
    'ready': True,
    'user': dict({
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
